# AnyDev

./: .env.example  README.md  docker-compose.yml  pyproject.toml  traefik.dynamic.yml  traefik.yml
anydev/: cli.py  configuration.py
anydev/commands/: project.py  project_commands.py  project_helpers.py  services.py  services_helpers.py
anydev/core/: cli_helpers.py  cli_output.py  command_alias_group.py  configure_services.py  create_project.py  docker_controls.py  project_helpers.py  questionary_styles.py
kubes/: memcached-values.yaml  mongodb-values.yaml  mysql-values.yaml  redis-values.yaml  selenium-values.yaml
services/: traefik.static.yml
templates/apache-php/: .env.example  Dockerfile  docker-compose.yml
templates/apache-php/server/: php.local.ini
templates/apache-php/server/apache/conf.d/: 500-laravel.conf
templates/php-apache/: .env.example  Dockerfile  README.md  docker-compose.yml
templates/php-apache/server/: php.ini
templates/php-apache/server/apache/: app.conf
templates/php-apache/server/apache/conf.d/: 000-disable-htaccess.conf  200-caching.conf  500-wordpress.conf
templates/php-apache/server/apache/fragments/: 500-wordpress.conf
templates/php-apache/server/conf.d/: 100-force-https.conf  200-caching.conf  500-laravel.conf
templates/php-apache/src/: index.php
templates/python/: .env.example  docker-compose.yml
templates/python-django/: .env.example  README.md
tests/: test_configuration.py  test_project_helpers.py
