[tool.poetry]
name = "anydev"
version = "0.0.1"
description = "A CLI that create Create portable, containerized local development environments for any stack."
authors = ["Dutch van Andel <dutch@vanandels.net>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
questionary = "^2.0.1"
typer = "^0.12.5"
python-dotenv = "^1.0.1"
pathlib = "^1.0.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anydev = "anydev.cli:main"